2006-09-24  Joe Neeman  <joeneeman@gmail.com>

	* lily/paper-book.cc (get_system_specs):
	(set_system_penalty): fix breakbefore.
	We used to set a penalty on the system after the break, now we
	set a permission on the system before the break

	* lily/grob-property.cc: add scm debugging hooks into
	property modification

	* lily/context-property.cc:
	* lily/engraver.cc:
	rename make_foo_from_properties to internal_make_foo and
	move it from context-property.cc to a member function of
	Engraver.

	* lily/include/lily-guile-macros.hh:
	overload ly_symbol2scm macro so that there is no more need
	to use internal_foo

	* lily/volta-repeat-iterator.cc:
	* lily/tweak-engraver.cc:
	* lily/tuplet-bracket.cc:
	* lily/span-bar-engraver.cc:
	* lily/script-engraver.cc:
	* lily/prob-scheme.cc:
	* lily/pointer-group-interface.cc:
	* lily/parser.yy:
	* lily/grob-scheme.cc:
	* lily/grob-property.cc:
	* lily/context.cc:
	* lily/context-property.cc:
	* lily/break-substitution.cc:
	* lily/break-align-engraver.cc:
	* lily/axis-group-interface.cc:
	* lily/align-interface.cc:
	remove calls to internal_FOO

	* lily/system-start-delimiter-engraver.cc:
	* lily/parenthesis-engraver.cc:
	* lily/accidental-engraver.cc:
	remove calls to make_foo_from_properties

2006-09-23  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/programming-iterfaces.itely: fix
	def-music-function -> define-music... leftover.

2006-09-23  Joe Neeman  <joeneeman@gmail.com>

	* lily/page-spacing.cc (min_page_count): by running the loop
	backwards, we can calculate ragged_last properly.

2006-09-22  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* ly/titling-init.ly (scoreTitleMarkup): Rename (typo!?)
	printfirst-page-number -> print-first-page-number

	* python/convertrules.py: corresponding rule.

	* Documentation/user/page.itely (Page formatting): Document the
	default values of all page layout parameters. 

2006-09-22  Erik Sandberg  <mandolaerik@gmail.com>
